[gd_scene load_steps=8 format=3 uid="uid://bp50pj5a6xv4f"]

[ext_resource type="Script" path="res://Scripts/Circular.gd" id="1_8whwu"]
[ext_resource type="Script" path="res://Scripts/TriPattern.gd" id="1_bbgcp"]
[ext_resource type="Script" path="res://Scripts/Pattern.gd" id="2_un000"]
[ext_resource type="Script" path="res://Scripts/CircilSinPattern.gd" id="4_i87ad"]
[ext_resource type="Script" path="res://Scripts/AimPattern.gd" id="5_bwtd3"]
[ext_resource type="Texture2D" uid="uid://cxb4bo5cbkgs7" path="res://Art/Bullet.png" id="6_1adtb"]
[ext_resource type="Script" path="res://Scripts/ComboPattern.gd" id="7_c8lhg"]

[node name="Node2D" type="Node2D"]

[node name="Camera2D" type="Camera2D" parent="."]

[node name="TriPattern" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("1_bbgcp")

[node name="ShotTimer2" type="Timer" parent="TriPattern"]
wait_time = 0.2

[node name="ShotTimer" type="Timer" parent="TriPattern"]
wait_time = 0.5
one_shot = true
autostart = true

[node name="SwirlPattern" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("1_8whwu")

[node name="ShotTimer" type="Timer" parent="SwirlPattern"]
wait_time = 0.1
autostart = true

[node name="CirclePattern" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("2_un000")

[node name="ShotTimer" type="Timer" parent="CirclePattern"]
wait_time = 0.7
autostart = true

[node name="ShotTimer2" type="Timer" parent="CirclePattern"]
wait_time = 0.7

[node name="Timer" type="Timer" parent="CirclePattern"]
wait_time = 0.3
one_shot = true
autostart = true

[node name="CircleSinPattern" type="Node2D" parent="."]
process_mode = 4
script = ExtResource("4_i87ad")

[node name="ShotTimer" type="Timer" parent="CircleSinPattern"]
wait_time = 0.25
autostart = true

[node name="AimPattern" type="Node2D" parent="."]
script = ExtResource("5_bwtd3")

[node name="ShotTimer" type="Timer" parent="AimPattern"]
wait_time = 0.25
autostart = true

[node name="Target" type="Sprite2D" parent="."]
position = Vector2(0, 400)
scale = Vector2(0.199999, 0.199999)
texture = ExtResource("6_1adtb")

[node name="ComboPattern" type="Node2D" parent="."]
script = ExtResource("7_c8lhg")

[connection signal="timeout" from="TriPattern/ShotTimer2" to="TriPattern" method="_on_shot_timer_2_timeout"]
[connection signal="timeout" from="TriPattern/ShotTimer" to="TriPattern" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="SwirlPattern/ShotTimer" to="SwirlPattern" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="CirclePattern/ShotTimer" to="CirclePattern" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="CirclePattern/ShotTimer2" to="CirclePattern" method="_on_shot_timer_2_timeout"]
[connection signal="timeout" from="CirclePattern/Timer" to="CirclePattern" method="_on_timer_timeout"]
[connection signal="timeout" from="CircleSinPattern/ShotTimer" to="CircleSinPattern" method="_on_shot_timer_timeout"]
[connection signal="timeout" from="AimPattern/ShotTimer" to="AimPattern" method="_on_shot_timer_timeout"]
